# QoSMos

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/nodes/helsinki/qosmos/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: flowmaps.c  flowmaps.h  hash_map.h  ip_address.h  lrucache.cpp  lrucache.h  native.h  packet.c  packet_checksum.c  packet_to_string.c  qosmos.h  qosmos_native.cpp  qosmos_native.h
app/src/main/java/nodes/helsinki/mdiaproximity/: DeviceState.java  MediaContext.java
app/src/main/java/nodes/helsinki/metatdata/: AudioStat.java  MetaMineConstants.java  SensorQueue.java
app/src/main/java/nodes/helsinki/qosmos/: MainActivity.java  NativeTunnels.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/nodes/helsinki/qosmos/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
